@@ -1,3 +1,7 @@
+2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed bug #10146: Session fixation vulnerability in user authentication (thanks to the TYPO3 Security Team and especially Marcus Krause)
+
 2009-01-20  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
